# travelling-viajes-api

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  security.py
app/models/: booking.py  destination.py  favorite.py  user.py
app/routes/: booking_route.py  destination_route.py  favorite_route.py  user_route.py
app/schemas/: booking_schema.py  destination_schema.py  favorite_schema.py  user_schema.py
app/services/: booking_service.py  destination_service.py  favorite_service.py  user_service.py
