[tool.poetry]
name = "travelling-viajes-api"
version = "0.1.0"
description = ""
authors = ["MielAndMoon <dmestasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
